--- a/todo/templates/index.html
+++ b/todo/templates/index.html
@@ -12,25 +12,65 @@
     <link rel="stylesheet" href="{% static 'css/bootstrap-reboot.css'%}">
     <link rel="stylesheet" href="{% static 'css/bootstrap-reboot.min.css'%}">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css'%}">
+    <link rel="stylesheet" href="{% static 'css/fontawesome/css/all.css'%}">
 </head>
 <body>
 
+{% if user.is_authenticated %}
 
-    <div class="row">
-        <div class="col-2"></div>
-        <div class="col-8">
-            <table class="table">
-                <tr><td>Topshiriq</td><td>Holati (bajarildi,bajarilmadi)</td></tr>
-                
-                {% for todo in todos %}
-                <tr><td>{{todo.id}}.{{todo.title}}</td><td>{{todo.status}}</td></tr>
-                    
-                {% endfor %}
-                    
-            </table>
-        </div>
-        <div class="col-2"></div>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link">Profilingiz -> </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link btn btn-success" href="/profile/">Profile</a>
+        </li>
+      </ul>
     </div>
+  </nav>
+
+<div class="row">
+    <div class="col-2"></div>
+    <div class="col-8">
+        <table class="table">
+            <tr><td>Topshiriq</td><td>Holati (bajarildi,bajarilmadi)</td></tr>
+            
+            {% for todo in todos %}
+            <tr><td>{{todo.id}}.{{todo.title}}</td><td>{% if todo.status%} <i class="fa fa-check"></i> {% else %} <i class="fa fa-window-close"></i> {% endif%}</td></tr>
+                
+            {% endfor %}
+                
+        </table>
+    </div>
+    <div class="col-2"></div>
+</div>
+{% else %}
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link">Iltimos saytga kiring!</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link btn btn-success" href="/login/">Log in</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+{% endif %}
+    
+
+
     
     <script src="{% static 'js/bootstrap.js'%}"></script>
     <script src="{% static 'js/bootstrap.bundle.js'%}"></script>
