--- a/todo/templates/account/base.html
+++ b/todo/templates/account/base.html
@@ -10,27 +10,34 @@
 
     {% if messages %}
     <div>
-      <strong>Messages:</strong>
       <ul>
         {% for message in messages %}
-        <li>{{message}}</li>
+        <li class="alert alert-info">{{message}}</li>
         {% endfor %}
       </ul>
     </div>
     {% endif %}
 
-    <div>
-      <strong>Menu:</strong>
-      <ul>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">Navbar</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
         {% if user.is_authenticated %}
-        <li><a href="{% url 'account_email' %}">Change E-mail</a></li>
-        <li><a href="{% url 'account_logout' %}">Sign Out</a></li>
+        <li><a class=" btn btn-success nav-item" href="{% url 'account_email' %}">Change E-mail</a></li>
+        <li><a class="btn btn-success nav-item" href="{% url 'account_logout' %}">Sign Out</a></li>
         {% else %}
-        <li><a href="{% url 'account_login' %}">Sign In</a></li>
-        <li><a href="{% url 'account_signup' %}">Sign Up</a></li>
+        <li><a class="btn btn-success nav-item" href="{% url 'account_login' %}">Sign In</a></li>
+        <li><a class="btn btn-success nav-item" href="{% url 'account_signup' %}">Sign Up</a></li>
         {% endif %}
+        </ul>
+      </div>
+    </nav>
+
       </ul>
-    </div>
     {% block content %}
     {% endblock %}
     {% endblock %}
