--- a/todo/templates/account/base.html
+++ b/todo/templates/account/base.html
@@ -1,5 +1,8 @@
-<!DOCTYPE html>
-<html>
+{% extends 'base.html'%}
+
+{% block todo_m %}
+  
+  
   <head>
     <title>{% block head_title %}{% endblock %}</title>
     {% block extra_head %}
@@ -43,5 +46,5 @@
     {% endblock %}
     {% block extra_body %}
     {% endblock %}
-  </body>
-</html>
+{% endblock %}
+  
