--- a/todo/templates/account/logout.html
+++ b/todo/templates/account/logout.html
@@ -2,9 +2,17 @@
 
 {% load i18n %}
 
-{% block head_title %}{% trans "Sign Out" %}{% endblock %}
+{% block todo_m %}
+  
+  
+{% block head_title %} <p class="d-none">Sign Out</p> {% endblock %}
 
-{% block content %}
+<div class="row">
+  <div class="col-4">
+
+  </div>
+  <div class="col-4">
+    {% block content %}
 <h1>{% trans "Sign Out" %}</h1>
 
 <p>{% trans 'Are you sure you want to sign out?' %}</p>
@@ -14,8 +22,17 @@
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
   {% endif %}
-  <button type="submit">{% trans 'Sign Out' %}</button>
+  <button type="submit" class="btn btn-danger">{% trans 'Sign Out' %}</button>
 </form>
 
 
 {% endblock %}
+
+  </div>
+  <div class="col-4">
+
+  </div>
+
+</div>
+{% endblock todo_m %}
+
