--- a/todo/templates/new.html
+++ b/todo/templates/new.html
@@ -26,7 +26,7 @@
     <div class="row">
         <div class="col-4"></div>
         <div class="col-4">
-        <form action="" method="post">{{form}} {% csrf_token %}<button class="btn btn-success" type="submit">Qo'shish</button>
+        <form action="" method="post">Topshiriq nomi:{{form.title}} {% csrf_token %}<button class="btn btn-success" type="submit">Qo'shish</button>
         </form></div>
         <div class="col-4"></div>
     </div>
